feat: support inline logo and styled signature

--- a/templates/medicine.html
+++ b/templates/medicine.html
@@ -12,8 +12,8 @@
 </head>
 <body style="margin:0; padding:0; background:#fff;">
   <!-- Логотип строго над заголовком -->
-  <div style="width:100%; text-align:right; padding-top:30px; padding-bottom:0;">
-    <img src="cid:logo" alt="Логотип Лань" style="max-width:200px; height:auto; display:inline-block;">
+  <div style="padding:30px 40px 0 0;">
+    <img src="cid:logo" alt="Логотип Лань" style="float:right; max-width:200px; height:auto;">
   </div>
 
   <!-- Заголовок по центру -->
